@@ -1,5 +1,26 @@
 package no.unit.nva.customer;
 
+import com.amazonaws.services.lambda.runtime.Context;
+import no.unit.nva.customer.model.ApplicationDomain;
+import no.unit.nva.customer.model.CustomerDao;
+import no.unit.nva.customer.model.CustomerDto;
+import no.unit.nva.customer.model.CustomerDto.ServiceCenter;
+import no.unit.nva.customer.model.VocabularyDto;
+import no.unit.nva.customer.model.VocabularyStatus;
+import no.unit.nva.customer.service.impl.DynamoDBCustomerService;
+import no.unit.nva.customer.testing.LocalCustomerServiceDatabase;
+import no.unit.nva.stubs.FakeContext;
+import nva.commons.core.attempt.Try;
+import nva.commons.logutils.LogUtils;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+import java.net.URI;
+import java.time.Instant;
+import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
 import static no.unit.nva.customer.testing.CustomerDataGenerator.randomAllowFileUploadForTypes;
 import static no.unit.nva.customer.testing.CustomerDataGenerator.randomCristinOrgId;
 import static no.unit.nva.customer.testing.CustomerDataGenerator.randomDoiAgent;
@@ -16,25 +37,6 @@ import static no.unit.nva.testutils.RandomDataGenerator.randomUri;
 import static nva.commons.core.attempt.Try.attempt;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
-import com.amazonaws.services.lambda.runtime.Context;
-import java.net.URI;
-import java.time.Instant;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import no.unit.nva.customer.model.ApplicationDomain;
-import no.unit.nva.customer.model.CustomerDao;
-import no.unit.nva.customer.model.CustomerDto;
-import no.unit.nva.customer.model.CustomerDto.ServiceCenter;
-import no.unit.nva.customer.model.VocabularyDto;
-import no.unit.nva.customer.model.VocabularyStatus;
-import no.unit.nva.customer.service.impl.DynamoDBCustomerService;
-import no.unit.nva.customer.testing.LocalCustomerServiceDatabase;
-import no.unit.nva.stubs.FakeContext;
-import nva.commons.core.attempt.Try;
-import nva.commons.logutils.LogUtils;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 
 public class CustomerBatchScanHandlerTest extends LocalCustomerServiceDatabase {
 
@@ -54,12 +56,12 @@ public class CustomerBatchScanHandlerTest extends LocalCustomerServiceDatabase {
     @Test
     void shouldUpdateCustomers() {
         var existingCustomers = IntStream.of(1, randomInteger(10))
-                                    .boxed()
-                                    .map(i -> newCustomerDto())
-                                    .map(attempt(c -> service.createCustomer(c)))
-                                    .map(Try::orElseThrow)
-                                    .map(CustomerDao::fromCustomerDto)
-                                    .collect(Collectors.toList());
+            .boxed()
+            .map(i -> newCustomerDto())
+            .map(attempt(c -> service.createCustomer(c)))
+            .map(Try::orElseThrow)
+            .map(CustomerDao::fromCustomerDto)
+            .toList();
 
         final var logAppender = LogUtils.getTestingAppender(CustomerBatchScanHandler.class);
         handler.handleRequest(input, context);
@@ -72,32 +74,32 @@ public class CustomerBatchScanHandlerTest extends LocalCustomerServiceDatabase {
     private CustomerDto newCustomerDto() {
         var oneMinuteInThePast = Instant.now().minusSeconds(60L);
         var customer = CustomerDto.builder()
-                           .withName(randomString())
-                           .withShortName(randomString())
-                           .withCreatedDate(oneMinuteInThePast)
-                           .withModifiedDate(oneMinuteInThePast)
-                           .withDisplayName(randomString())
-                           .withArchiveName(randomString())
-                           .withCname(randomString())
-                           .withInstitutionDns(randomString())
-                           .withFeideOrganizationDomain(randomString())
-                           .withCristinId(randomCristinOrgId())
-                           .withCustomerOf(ApplicationDomain.fromUri(URI.create("")))
-                           .withVocabularies(randomVocabularySet())
-                           .withRorId(randomUri())
-                           .withServiceCenter(new ServiceCenter(randomUri(), randomString()))
-                           .withPublicationWorkflow(randomPublicationWorkflow())
-                           .withDoiAgent(randomDoiAgent(randomString()))
-                           .withSector(randomSector())
-                           .withNviInstitution(randomBoolean())
-                           .withRboInstitution(randomBoolean())
-                           .withInactiveFrom(randomInstant())
-                           .withAllowFileUploadForTypes(randomAllowFileUploadForTypes())
-                           .withRightsRetentionStrategy(randomRightsRetentionStrategy())
-                           .withGeneralSupportEnabled(true)
-                           .build();
+            .withName(randomString())
+            .withShortName(randomString())
+            .withCreatedDate(oneMinuteInThePast)
+            .withModifiedDate(oneMinuteInThePast)
+            .withDisplayName(randomString())
+            .withArchiveName(randomString())
+            .withCname(randomString())
+            .withInstitutionDns(randomString())
+            .withFeideOrganizationDomain(randomString())
+            .withCristinId(randomCristinOrgId())
+            .withCustomerOf(ApplicationDomain.fromUri(URI.create("")))
+            .withVocabularies(randomVocabularySet())
+            .withRorId(randomUri())
+            .withServiceCenter(new ServiceCenter(randomUri(), randomString()))
+            .withPublicationWorkflow(randomPublicationWorkflow())
+            .withDoiAgent(randomDoiAgent(randomString()))
+            .withSector(randomSector())
+            .withNviInstitution(randomBoolean())
+            .withRboInstitution(randomBoolean())
+            .withInactiveFrom(randomInstant())
+            .withAllowFileUploadForTypes(randomAllowFileUploadForTypes())
+            .withRightsRetentionStrategy(randomRightsRetentionStrategy())
+            .withGeneralSupportEnabled(true)
+            .build();
         assertThat(customer, doesNotHaveEmptyValuesIgnoringFields(Set.of("identifier", "id", "context",
-                                                                         "doiAgent.password", "doiAgent.id")));
+            "doiAgent.password", "doiAgent.id")));
         return customer;
     }
 
