@@ -1,17 +1,5 @@
 package no.unit.nva.database;
 
-import static java.util.Objects.nonNull;
-import static no.unit.nva.useraccessservice.constants.DatabaseIndexDetails.SEARCH_USERS_BY_CRISTIN_IDENTIFIERS;
-import static no.unit.nva.useraccessservice.constants.DatabaseIndexDetails.SEARCH_USERS_BY_INSTITUTION_INDEX_NAME;
-import static no.unit.nva.useraccessservice.dao.UserDao.TYPE_VALUE;
-import static no.unit.nva.useraccessservice.interfaces.Typed.TYPE_FIELD;
-import static nva.commons.core.attempt.Try.attempt;
-import java.net.URI;
-import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import no.unit.nva.database.IdentityService.Constants;
 import no.unit.nva.useraccessservice.dao.RoleDb;
 import no.unit.nva.useraccessservice.dao.UserDao;
@@ -31,6 +19,20 @@ import software.amazon.awssdk.enhanced.dynamodb.model.QueryEnhancedRequest;
 import software.amazon.awssdk.enhanced.dynamodb.model.ScanEnhancedRequest;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
+
+import java.net.URI;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
+import static java.util.Objects.nonNull;
+import static no.unit.nva.useraccessservice.constants.DatabaseIndexDetails.SEARCH_USERS_BY_CRISTIN_IDENTIFIERS;
+import static no.unit.nva.useraccessservice.constants.DatabaseIndexDetails.SEARCH_USERS_BY_INSTITUTION_INDEX_NAME;
+import static no.unit.nva.useraccessservice.dao.UserDao.TYPE_VALUE;
+import static no.unit.nva.useraccessservice.interfaces.Typed.TYPE_FIELD;
+import static nva.commons.core.attempt.Try.attempt;
 
 public class UserService extends DatabaseSubService {
 
@@ -62,7 +64,27 @@ public class UserService extends DatabaseSubService {
      */
     public UserDto getUser(UserDto queryObject) throws NotFoundException {
         return getUserAsOptional(queryObject)
-                   .orElseThrow(() -> new NotFoundException(USER_NOT_FOUND_MESSAGE + queryObject.getUsername()));
+            .orElseThrow(() -> new NotFoundException(USER_NOT_FOUND_MESSAGE + queryObject.getUsername()));
+    }
+
+    private Optional<UserDto> getUserAsOptional(UserDto queryObject) {
+        if (logger.isDebugEnabled()) {
+            logger.debug(GET_USER_DEBUG_MESSAGE + convertToStringOrWriteErrorMessage(queryObject));
+        }
+
+        UserDto searchResult = attemptToFetchObject(queryObject);
+        return Optional.ofNullable(searchResult);
+    }
+
+    private UserDto attemptToFetchObject(UserDto queryObject) {
+        UserDao userDao = attempt(() -> UserDao.fromUserDto(queryObject))
+            .map(this::fetchItem)
+            .orElseThrow(DatabaseSubService::handleError);
+        return nonNull(userDao) ? userDao.toUserDto() : null;
+    }
+
+    private UserDao fetchItem(UserDao userDao) {
+        return table.getItem(userDao);
     }
 
     /**
@@ -72,21 +94,21 @@ public class UserService extends DatabaseSubService {
     public List<UserDto> listAllUsers() {
 
         return this.table
-                   .scan(buildScanRequestForAllUsers())
-                   .stream()
-                   .map(Page::items)
-                   .flatMap(Collection::stream)
-                   .filter(dao -> dao.getType().equals(TYPE_VALUE))
-                   .map(UserDao::toUserDto)
-                   .toList();
+            .scan(buildScanRequestForAllUsers())
+            .stream()
+            .map(Page::items)
+            .flatMap(Collection::stream)
+            .filter(dao -> dao.getType().equals(TYPE_VALUE))
+            .map(UserDao::toUserDto)
+            .toList();
     }
 
     private static ScanEnhancedRequest buildScanRequestForAllUsers() {
         var expression = Expression.builder().expression("#type = :type")
-                             .putExpressionValue(":type",
-                                                 AttributeValue.builder().s(TYPE_VALUE).build())
-                             .putExpressionName("#type", TYPE_FIELD)
-                             .build();
+            .putExpressionValue(":type",
+                AttributeValue.builder().s(TYPE_VALUE).build())
+            .putExpressionName("#type", TYPE_FIELD)
+            .build();
         return ScanEnhancedRequest.builder().filterExpression(expression).build();
     }
 
@@ -102,11 +124,19 @@ public class UserService extends DatabaseSubService {
         var result = institutionsIndex.query(listUsersQuery);
 
         var users = result.stream()
-                        .map(Page::items)
-                        .flatMap(Collection::stream)
-                        .collect(Collectors.toList());
+            .map(Page::items)
+            .flatMap(Collection::stream)
+            .toList();
         return users.stream().map(UserDao::toUserDto)
-                   .collect(Collectors.toList());
+            .collect(Collectors.toList());
+    }
+
+    private QueryEnhancedRequest createListUsersByInstitutionQuery(URI institution) {
+        return QueryEnhancedRequest.builder()
+            .queryConditional(
+                QueryConditional.keyEqualTo(Key.builder().partitionValue(institution.toString()).build()))
+            .consistentRead(false)
+            .build();
     }
 
     /**
@@ -127,6 +157,34 @@ public class UserService extends DatabaseSubService {
         return databaseEntryWithSyncedRoles.toUserDto();
     }
 
+    private UserDao syncRoleDetails(UserDao updateObject) {
+        return userWithSyncedRoles(updateObject);
+    }
+
+    private UserDao userWithSyncedRoles(UserDao currentUser) {
+        List<RoleDb> roles = currentRoles(currentUser);
+        return currentUser.copy().withRoles(roles).build();
+    }
+
+    // TODO: use batch query for minimizing the cost.
+    private List<RoleDb> currentRoles(UserDao currentUser) {
+        return currentUser.getRolesNonNull()
+            .stream()
+            .map(roleService::fetchRoleDb)
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
+    }
+
+    private void checkUserDoesNotAlreadyExist(UserDto user) throws ConflictException {
+        if (userAlreadyExists(user)) {
+            throw new ConflictException(USER_ALREADY_EXISTS_ERROR_MESSAGE + user.getUsername());
+        }
+    }
+
+    private boolean userAlreadyExists(UserDto user) {
+        return this.getUserAsOptional(user).isPresent();
+    }
+
     /**
      * Update an existing user.
      *
@@ -142,83 +200,9 @@ public class UserService extends DatabaseSubService {
         }
     }
 
-    public List<UserDto> getUsersByByCristinId(URI cristinPersonId) {
-        var request = createQueryForSearchingInCristinCredentialsIndex(cristinPersonId, EMPTY_CRISTIN_ORG_ID);
-        var result = cristinCredentialsIndex.query(request);
-        return result.stream()
-                   .map(Page::items)
-                   .flatMap(Collection::stream)
-                   .map(UserDao::toUserDto).collect(Collectors.toList());
-    }
-
-    public UserDto getUsersByByCristinIdAndCristinOrgId(URI cristinPersonId, URI cristinOrgId) {
-        var request = createQueryForSearchingInCristinCredentialsIndex(cristinPersonId, cristinOrgId);
-        var result = cristinCredentialsIndex.query(request);
-
-        return result.stream()
-                   .map(Page::items)
-                   .flatMap(Collection::stream)
-                   .map(UserDao::toUserDto)
-                   .collect(SingletonCollector.collect());
-    }
-
-    private QueryEnhancedRequest createQueryForSearchingInCristinCredentialsIndex(URI cristinPersonId,
-                                                                                  URI cristinOrgId) {
-        var key = Optional.ofNullable(cristinOrgId)
-                      .map(
-                          orgId -> Key.builder().partitionValue(cristinPersonId.toString()).sortValue(orgId.toString()))
-                      .orElseGet(() -> Key.builder().partitionValue(cristinPersonId.toString()))
-                      .build();
-        return QueryEnhancedRequest.builder()
-                   .queryConditional(QueryConditional.keyEqualTo(key))
-                   .build();
-    }
-
-    private UserDao syncRoleDetails(UserDao updateObject) {
-        return userWithSyncedRoles(updateObject);
-    }
-
-    private Optional<UserDto> getUserAsOptional(UserDto queryObject) {
-        if (logger.isDebugEnabled()) {
-            logger.debug(GET_USER_DEBUG_MESSAGE + convertToStringOrWriteErrorMessage(queryObject));
-        }
-
-        UserDto searchResult = attemptToFetchObject(queryObject);
-        return Optional.ofNullable(searchResult);
-    }
-
-    private QueryEnhancedRequest createListUsersByInstitutionQuery(URI institution) {
-        return QueryEnhancedRequest.builder()
-                   .queryConditional(
-                       QueryConditional.keyEqualTo(Key.builder().partitionValue(institution.toString()).build()))
-                   .consistentRead(false)
-                   .build();
-    }
-
-    private void checkUserDoesNotAlreadyExist(UserDto user) throws ConflictException {
-        if (userAlreadyExists(user)) {
-            throw new ConflictException(USER_ALREADY_EXISTS_ERROR_MESSAGE + user.getUsername());
-        }
-    }
-
     private UserDto getExistingUserOrSendNotFoundError(UserDto queryObject) throws NotFoundException {
         return getUserAsOptional(queryObject)
-                   .orElseThrow(() -> new NotFoundException(USER_NOT_FOUND_MESSAGE + queryObject.getUsername()));
-    }
-
-    private boolean userAlreadyExists(UserDto user) {
-        return this.getUserAsOptional(user).isPresent();
-    }
-
-    private UserDto attemptToFetchObject(UserDto queryObject) {
-        UserDao userDao = attempt(() -> UserDao.fromUserDto(queryObject))
-                              .map(this::fetchItem)
-                              .orElseThrow(DatabaseSubService::handleError);
-        return nonNull(userDao) ? userDao.toUserDto() : null;
-    }
-
-    private UserDao fetchItem(UserDao userDao) {
-        return table.getItem(userDao);
+            .orElseThrow(() -> new NotFoundException(USER_NOT_FOUND_MESSAGE + queryObject.getUsername()));
     }
 
     private boolean userHasChanged(UserDto existingUser, UserDao desiredUpdateWithSyncedRoles) {
@@ -229,17 +213,35 @@ public class UserService extends DatabaseSubService {
         table.putItem(userUpdateWithSyncedRoles);
     }
 
-    private UserDao userWithSyncedRoles(UserDao currentUser) {
-        List<RoleDb> roles = currentRoles(currentUser);
-        return currentUser.copy().withRoles(roles).build();
+    public List<UserDto> getUsersByByCristinId(URI cristinPersonId) {
+        var request = createQueryForSearchingInCristinCredentialsIndex(cristinPersonId, EMPTY_CRISTIN_ORG_ID);
+        var result = cristinCredentialsIndex.query(request);
+        return result.stream()
+            .map(Page::items)
+            .flatMap(Collection::stream)
+            .map(UserDao::toUserDto).collect(Collectors.toList());
     }
 
-    // TODO: use batch query for minimizing the cost.
-    private List<RoleDb> currentRoles(UserDao currentUser) {
-        return currentUser.getRolesNonNull()
-                   .stream()
-                   .map(roleService::fetchRoleDb)
-                   .filter(Objects::nonNull)
-                   .collect(Collectors.toList());
+    private QueryEnhancedRequest createQueryForSearchingInCristinCredentialsIndex(URI cristinPersonId,
+                                                                                  URI cristinOrgId) {
+        var key = Optional.ofNullable(cristinOrgId)
+            .map(
+                orgId -> Key.builder().partitionValue(cristinPersonId.toString()).sortValue(orgId.toString()))
+            .orElseGet(() -> Key.builder().partitionValue(cristinPersonId.toString()))
+            .build();
+        return QueryEnhancedRequest.builder()
+            .queryConditional(QueryConditional.keyEqualTo(key))
+            .build();
+    }
+
+    public UserDto getUsersByByCristinIdAndCristinOrgId(URI cristinPersonId, URI cristinOrgId) {
+        var request = createQueryForSearchingInCristinCredentialsIndex(cristinPersonId, cristinOrgId);
+        var result = cristinCredentialsIndex.query(request);
+
+        return result.stream()
+            .map(Page::items)
+            .flatMap(Collection::stream)
+            .map(UserDao::toUserDto)
+            .collect(SingletonCollector.collect());
     }
 }
